Finished planes chapter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(
     src/shapes/material.cpp
     src/shapes/shape.h
     src/shapes/sphere.cpp
+    src/shapes/plane.cpp
 )
 target_include_directories(shapes PUBLIC ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(shapes primitives)
@@ -61,7 +62,8 @@ target_link_libraries(mainWriter GTest::gtest GTest::gtest_main pthread
 add_executable(
     tests
     src/tests/sceneTest.cpp
-    src/tests/lightingTest.cpp)
+    src/tests/lightingTest.cpp
+    src/tests/shadowTest.cpp)
 target_include_directories(tests PUBLIC ${PROJECT_SOURCE_DIR}/src)
 target_link_libraries(tests GTest::gtest GTest::gtest_main pthread
     primitives display shapes images lights scene)
